# bloohm

./: .ghci  .gitignore  README.md  bloohm.cabal  boot.py  bors.toml  code.py  default.nix  flake.nix
.bors-hooks/: after-merge
app/: Main.hs
nix/: sources.json
src/: Bloohm.hs
test/: Main.hs
