cabal-version:       3.4
name:                bloohm
synopsis:            visual bloom filter for neotrellis m4 output
description:         visual bloom filter for process status visualization
version:             1.0.0.1
homepage:            https://github.com/shapr/bloohm
license:             BSD-3-Clause
author:              Shae Erisson
maintainer:          Shae Erisson
copyright:           Shae Erisson
category:            Embedded
build-type:          Simple

source-repository head
  type: git
  location: https://github.com/shapr/bloohm.git

library
  hs-source-dirs:      src
  default-language:    Haskell2010
  exposed-modules:     Bloohm
  ghc-options:         -Wall -fno-warn-name-shadowing
  build-depends:       base >= 4.18.2 && < 4.20
                     , crypton >= 1.0.0 && < 1.1
                     , bytestring >= 0.11.5 && < 0.12
                     , memory >= 0.18.0 && < 0.19

executable bloohm
  main-is:            Main.hs
  hs-source-dirs:     app
  default-language:   Haskell2010
  ghc-options:        -threaded -O2
  build-depends:      base >= 4.18.2 && < 4.20
                    , bloohm
                    , serialport >= 0.5.5 && < 0.6
                    , bytestring >= 0.11.5 && < 0.12
                    , ReadArgs >= 1.2.3 && < 1.3

test-suite bloohm-tests
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Main.hs
  default-language: Haskell2010
  ghc-options:      -Wall -threaded
  build-depends:    base
                  , bloohm
                  , hedgehog
